[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemies/timerEnemy.gd" type="Script" id=2]

[node name="timerEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="startTimer" type="Timer" parent="." index="3"]
wait_time = 1.3
one_shot = true
autostart = true

[node name="endTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="Tween" type="Tween" parent="." index="5"]

[connection signal="timeout" from="startTimer" to="." method="firstMotionStart"]
[connection signal="timeout" from="endTimer" to="." method="secondMotionStart"]
